k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sheldon-os
  labels:
    name: sheldon-os
    environment: production
    app: sheldon-os

# Made with Bob
